--- a/src/components/SoundPlayer/SoundPlayer.module.sass
+++ b/src/components/SoundPlayer/SoundPlayer.module.sass
@@ -1,2 +1,3 @@
 .player
   border: 1px solid red
+  display: none
