--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -13,18 +13,15 @@ img
 
 .dataBlok
   &:nth-child(1)
-    // border: 1px solid pink 
     top: 40%
     left: 20%
   &:nth-child(2) // LOCATION
-    // border: 1px solid purple 
-    top: 10%
-    left: 60%
+    top: 15%
+    left: 65%
     @media screen and (max-width: 850px) 
       top: 15%
       left: 15%
   &:nth-child(3) // TEMP
-    // border: 1px solid red 
     top: 42%
     right: 10%
     @media screen and (max-width: 850px) 
@@ -33,7 +30,6 @@ img
     .icon
       animation-delay: random(1000) / 1000 + 1 + s
   &:nth-child(4) // HUMIDITY
-    // border: 1px solid blue 
     top: 30%
     right: 3%
     @media screen and (max-width: 850px) 
@@ -42,25 +38,22 @@ img
     .icon
       animation-delay: random(1000) / 1000 + 1 + s
   &:nth-child(5) // CONDITIONS
-    // border: 1px solid green 
     top: 80%
     left: 60%
     @media screen and (max-width: 850px) 
       top: 25%
-      left: 30%
+      left: 35%
     .icon
       animation-delay: random(1000) / 1000 + 1 + s
   &:nth-child(6) // TIME
-    // border: 1px solid yellow 
-    top: 90%
-    left: 15%
+    top: 65%
+    left: 20%
     @media screen and (max-width: 850px) 
       top: 85%
-      left: 15%
+      left: 10%
     .icon
       animation-delay: random(1000) / 1000 + 1 + s
   &:nth-child(7) // TIME
-    // border: 1px solid orange 
     top: 60%
     right: 24%
     .icon
